--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http:  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.1
   google_fonts: ^2.1.0
+  velocity_x: ^3.3.0
+  path_provider: ^2.0.7  
+  
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/files/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
